[tool.poetry]
name = "nlp-text-sentiment-analysis"
version = "0.1.0"
description = "\"NLP Sentiment Analysis\""
authors = ["brenoAV"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
mlflow = "^2.10.0"
requests = "^2.31.0"
scikit-learn = "^1.4.0"
pandas = "^2.2.0"
tensorflow = "=2.12.1"
keras-tuner = "^1.4.6"
torch = "=2.0.1"
torchtext = "=0.15.2"
ray = {extras = ["tune"], version = "^2.9.1"}

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
